--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ToDoList;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
